production-env/module-networking/02-igw.tf
resource "aws_internet_gateway" "tf_igw" {
  vpc_id = aws_vpc.tf_vpc.id

  tags = {
    Name = "${var.name}-igw"
    Environment = var.environment
  }
}
